<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/image"
            android:padding="5dp"
            android:src="@drawable/ic_launcher_background"
            />

        <LinearLayout
            android:id="@+id/innerLinearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/capital_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capital_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />


        </LinearLayout>

    </LinearLayout>
</layout>